# df-git-ui

./: CMakeLists.txt
src/: git-info.cc  git-info.h  maindlg.cc  resource.h  resource.rc  stuff.cc  stuff.h
